Bug fix: weather block alignment

--- a/sites/all/themes/dev/css/dev-alpha-default.css
+++ b/sites/all/themes/dev/css/dev-alpha-default.css
@@ -204,7 +204,7 @@ h1 {
 
 #block-local-weather-local-weather {
     position: absolute;
-    left: 347px;
+    left: 360px;
     bottom: 0;
 }
 
